tdf#127675: SfxObjectShell::DoLoad takes ownership of the passed medium

Implementation defect from commit ba49c9249fcfec8891ef7d53dc8c9db1715df020
(tdf#127675 Treat Biff12 when pasting, 2025-11-16).

I don't know how to produce a unit test for this...

Change-Id: I82a5f1c7cbd1e9d0cc32f8a9c5d62bade2911afc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196161
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit a616d6f20f95735d4db4af1c102b40c9c98c2080)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196166